tests/NormalTests/paczka1/small_fuzzy/32585609.err
Error in line 1: A709 S151 50,3
Error in line 7: 2g08m8A A135 94,0
Error in line 10: 2g08m8A A709 35,3
Error in line 12: 2g08m8A S151 936,2
